--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: "Barlow condensed", sans-serif;
-  background-image: url(../assets/home/background-home-desktop.jpg);
+  background-image: url(background-home-desktop.jpg);
   background-repeat: no-repeat;
   background-size: 1920px 1080px;
 }
